# crun

./: .dockerignore  .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile.test  Makefile  README.md  claude.md  package.json
.github/workflows/: ci.yaml  release.yaml
docs/plans/: 2026-02-11-implementation-plan.md
src/: cli.rs  color.rs  command.rs  input.rs  main.rs  output.rs  runner.rs
tests/integration/: cli.spec.ts  package-lock.json  package.json  test-utils.ts  vitest.config.ts
tests/integration/fixtures/: ignore-sigterm.mjs  read-echo.mjs  sleep.mjs
tools/: release.sh
