[package]
name = "crun"
version = "0.1.0"
edition = "2021"
description = "Run commands concurrently - a Rust port of concurrently"
license = "MIT"
repository = "https://github.com/llimllib/crun"
keywords = ["concurrent", "parallel", "command", "shell", "process"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
chrono = "0.4"
libc = "0.2"

[dev-dependencies]

[[bin]]
name = "crun"
path = "src/main.rs"

[profile.release]
lto = true
