[package]
name = "crun"
version = "0.7.0"
edition = "2021"
description = "Run commands concurrently - a Rust port of concurrently"
license = "MIT"
repository = "https://github.com/llimllib/crun"
keywords = ["concurrent", "parallel", "command", "shell", "process"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
# jiff is used for timestamps - it reads /etc/localtime on Unix instead of
# linking CoreFoundation (like chrono does via iana-time-zone), which allows
# cross-compilation from Linux via cargo-zigbuild.
jiff = { version = "0.2", default-features = false, features = ["std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]

[[bin]]
name = "crun"
path = "src/main.rs"

[profile.release]
lto = true
